k8s/apps/app5/app5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app5
  namespace: sso-pilot
spec:
  selector:
    app: app5
  ports:
    - port: 8080
      targetPort: 8080
