k8s/apps/app5/app5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app5-ingress
  namespace: sso-pilot
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
spec:
  ingressClassName: nginx
  rules:
    - host: app5.sso.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app5
                port:
                  number: 8080
